# cli-coding-assistant

./: .gitignore  README.md  hello.txt  main.py  pyproject.toml
agent/: __init__.py  chat.py  core.py  explainer.py  loop.py  parser.py  prompts.py  utils.py
examples/: sample_tasks.txt
tests/: benchmark.py
