[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cli-coding-assistant"
version = "0.1.0"
description = "AI agent that writes, runs, and fixes Python code from plain English"
requires-python = ">=3.9"
dependencies = [
    "groq",
    "click",
    "python-dotenv",
]

[project.scripts]
code = "main:main"

[tool.setuptools.packages.find]
where = ["."]